--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # pyqt
 *_ui.py
-resources.py
+images.py
 __pycache__/
 .agignore
 
@@ -9,6 +9,9 @@ build/
 dist/
 build-output/
 *.spec
+
+# pypi
+*.egg-info/
 
 # Documentations
 docs/_build/
