Add python3-pyqt5 to gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ pytest:
     - wget https://gitlab.com/azzamsa/lupv/uploads/398fa4473db0b43f19d59e26670b3e25/student_tasks.tar.gz -P tests/
     - tar xf tests/student_tasks.tar.gz -C tests/
     - apt-get update -q -y
+    - apt-get install python3-pyqt5
     - pip install -r requirements.txt
     - pip install -r requirements-dev.txt
     - pytest --durations=10 tests/
