--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ pytest:
     - tar xf tests/student_tasks.tar.gz -C tests/
     - apt-get update -q -y
     - apt-get -q -y --no-install-recommends install python3-pyqt5
+    - apt-get -q -y --no-install-recommends install xvfb
     - pip install -r requirements.txt
     - pip install -r requirements-dev.txt
     - pytest --cov=Lupv -vv -s --durations=10 tests/
